# i-dont-like-trading

./: README.md
api/: .gitignore  Cargo.toml  README.md  index.rs  now.json
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/debug/: AndroidManifest.xml
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/example/i_dont_like_trade/: MainActivity.java
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/test/: widget_test.dart
